# agentflow-infrastructure

./: .dockerignore  .env.demo  .gitignore  .golangci.yml  .goreleaser.yml  ARCHITECTURE.md  DEMO_GUIDE.md  Dockerfile  Dockerfile.control-plane  Dockerfile.worker  Guide.md  Makefile  POC_GUIDE.md  PRODUCT_SPEC.md  README.md  YC_APPLICATION.md  demo-examples.sh  demo-presentation.md  demo-setup.sh  demo-standalone.sh  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  proxy-server.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml
agents/hello-world/: Dockerfile  main.go
clickhouse/: 001_trace_events.sql
cmd/agentctl/: main.go
cmd/agentflow/: commands.go  deploy.go  live_view.go  main.go  status.go
cmd/control-plane/: demo_server.go  http_server.go  main.go
cmd/server/: main.go  simple_test.go
cmd/standalone-demo/: main.go
cmd/worker/: main.go
core/llm-router/: main.go
core/orchestrator/: dag.go  main.go
core/runtime/: Cargo.toml
core/runtime/src/: agent.rs  lib.rs  main.rs  server.rs  wasm.rs
dashboard/: index.html  server.go
demo-ui/: index.html
deployments/: docker-compose.dev.yml
docs/: api-reference.md  api.md  architecture.md  deployment-guide.md  getting-started.md  security-model.md
examples/: content-generation.yaml  customer_support_pipeline.yaml  data-processing-pipeline.yaml  data_pipeline.yaml  doc_triage.yaml  hello-world-pipeline.yaml  prompt_templates.md  research_synthesis.yaml  simple_text_processing.yaml
k8s/: clickhouse.yaml  control-plane.yaml  namespace.yaml  nats.yaml  postgres.yaml  redis.yaml  workers.yaml
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
monitoring/: prometheus.yml
scripts/: clickhouse_schema.sql  schema.sql  setup-dev.sh
sdk/python/: pyproject.toml
sdk/python/agentflow/: __init__.py  client.py
(+72 files in other folders)
