[package]
name = "agentflow-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
wasmtime = "15.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-nats = "0.33"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "agentflow_runtime"
path = "src/lib.rs"

[[bin]]
name = "agentflow-runtime"
path = "src/main.rs"